# SuperAGI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-gpu  README.MD  SECURITY.md  docker-compose.modern-dev.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-package.yml
docs/: 2025_models.md  api_models.md
gui/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
gui/components/ui/: Button.tsx
gui/contexts/: AuthContext.tsx  ToastContext.tsx
gui/hooks/: useApi.ts
gui/lib/: api.ts  utils.ts
gui/types/: index.ts
superagi/config/: config.py
superagi/llms/: anthropic.py  google_palm.py  grok.py  groq.py  llm_model_factory.py  openai.py
superagi/models/: models.py  models_config.py
superagi/types/: api_models.py  model_source_types.py  simple_api_models.py
tests/unit_tests/: test_api_models.py  test_new_providers.py
tests/unit_tests/types/: test_model_source_types.py
